--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,28 +1,32 @@
-
+body{
+    overflow: hidden;
+}
 #img1 {
-  height: 90%;
-    width: 200%;
- margin-top: 10.5%;
+  height: 87%;
+    width: 100%;
+ margin-top: 9%;
 }
 .row {
     margin: 1px;
 }
 #col{
-    right: 21%;
-
-width: 100%;
-
+    right: 18%;
 }
 #col2 {
 
 }
 @media only screen and (max-width: 600px) {
     #img1{
-        display: none;
+        display: block;
+        transform: scale(0.555);
+        margin-left: 19px;
     }
     .row {
         display: block;
         width: 300%;
+    }
+    body{
+        overflow-x: hidden;
     }
 
     #col2 {
